--- a/app/assets/stylesheets/google.scss
+++ b/app/assets/stylesheets/google.scss
@@ -2,9 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #map {
-  height: 70%;
   width: 70%;
-  margin: 2em auto;
+  height: 45%;
+
+  margin: 0 10em;
 }
 
 
